# ST_DeepLearning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Code/: Experiment_SimulatedData.ipynb  Experiment_TemperatureData.ipynb
Code/Simulated_data/: SIM1_spatialbasis.txt
configs/: simulated.yaml  temperature.yaml
notebooks/: experiment_simulated.ipynb  experiment_temperature.ipynb
src/stdl/: __init__.py  cli.py  config.py  data.py  decomposition.py  evaluate.py  model.py  train.py
tests/: conftest.py  test_data.py  test_decomposition.py  test_model.py
