[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stdl"
version = "0.1.0"
description = "Spatio-Temporal Deep Learning framework for environmental field prediction"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Federico Amato", email = "federico.amato@datascience.ch" },
    { name = "Fabian Guignard" },
    { name = "Sylvain Robert" },
    { name = "Mikhail Kanevski" },
]
keywords = ["deep-learning", "spatio-temporal", "geostatistics", "climate", "eof"]
dependencies = [
    "tensorflow>=2.15",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.scripts]
stdl = "stdl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stdl"]

[dependency-groups]
dev = [
    "black>=24.0",
    "ruff>=0.3",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.9",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
